pushing dropout results

--- a/OntoEnricher/src/Train.ipynb
+++ b/OntoEnricher/src/Train.ipynb
@@ -797,59 +797,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Instances</th>\n",
+       "      <th>Knocked out</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.3,0,0.15</th>\n",
+       "      <td>0.751351</td>\n",
+       "      <td>0.231047</td>\n",
+       "      <td>0.807114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.2,0</th>\n",
+       "      <td>0.754054</td>\n",
+       "      <td>0.228571</td>\n",
+       "      <td>0.781741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.2,0.15</th>\n",
+       "      <td>0.765382</td>\n",
+       "      <td>0.231884</td>\n",
+       "      <td>0.792333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.7,0</th>\n",
+       "      <td>0.764151</td>\n",
+       "      <td>0.227758</td>\n",
+       "      <td>0.791645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.7,0.15</th>\n",
+       "      <td>0.762803</td>\n",
+       "      <td>0.223022</td>\n",
+       "      <td>0.806530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.8,0</th>\n",
+       "      <td>0.761840</td>\n",
+       "      <td>0.227758</td>\n",
+       "      <td>0.797994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3,0.8,0.15</th>\n",
+       "      <td>0.758808</td>\n",
+       "      <td>0.224638</td>\n",
+       "      <td>0.807220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0,0.15</th>\n",
+       "      <td>0.750168</td>\n",
+       "      <td>0.230216</td>\n",
+       "      <td>0.811401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.2,0</th>\n",
+       "      <td>0.754743</td>\n",
+       "      <td>0.236162</td>\n",
+       "      <td>0.783306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.2,0.15</th>\n",
+       "      <td>0.756098</td>\n",
+       "      <td>0.231884</td>\n",
+       "      <td>0.800041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.7,0</th>\n",
+       "      <td>0.764348</td>\n",
+       "      <td>0.232727</td>\n",
+       "      <td>0.795354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.7,0.15</th>\n",
+       "      <td>0.762803</td>\n",
+       "      <td>0.220641</td>\n",
+       "      <td>0.803086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.8,0</th>\n",
+       "      <td>0.774848</td>\n",
+       "      <td>0.223827</td>\n",
+       "      <td>0.798362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35,0.8,0.15</th>\n",
+       "      <td>0.761969</td>\n",
+       "      <td>0.213523</td>\n",
+       "      <td>0.808588</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Test  Instances  Knocked out\n",
+       "0.3,0,0.15     0.751351   0.231047     0.807114\n",
+       "0.3,0.2,0      0.754054   0.228571     0.781741\n",
+       "0.3,0.2,0.15   0.765382   0.231884     0.792333\n",
+       "0.3,0.7,0      0.764151   0.227758     0.791645\n",
+       "0.3,0.7,0.15   0.762803   0.223022     0.806530\n",
+       "0.3,0.8,0      0.761840   0.227758     0.797994\n",
+       "0.3,0.8,0.15   0.758808   0.224638     0.807220\n",
+       "0.35,0,0.15    0.750168   0.230216     0.811401\n",
+       "0.35,0.2,0     0.754743   0.236162     0.783306\n",
+       "0.35,0.2,0.15  0.756098   0.231884     0.800041\n",
+       "0.35,0.7,0     0.764348   0.232727     0.795354\n",
+       "0.35,0.7,0.15  0.762803   0.220641     0.803086\n",
+       "0.35,0.8,0     0.774848   0.223827     0.798362\n",
+       "0.35,0.8,0.15  0.761969   0.213523     0.808588"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results = \"\"\"results_output_dropout_0.35.txt:Final Results (Test): [0.6967418546365914, 0.6384105960264901, 0.6452476572958501, 0.6418109187749667]\n",
-    "results_output_dropout_0.35.txt:Final Results (Instances): [0.21454545454545454, 0.09012875536480687, 0.6, 0.15671641791044774]\n",
-    "results_output_dropout_0.35.txt:Final Results (Knocked out): [0.5716865294330084, 0.7577788415509813, 0.5716865294330084, 0.651708522025525]\n",
-    "results_output_dropout_0.45.txt:Final Results (Test): [0.6491228070175439, 0.5890227576974565, 0.5890227576974565, 0.5890227576974565]\n",
-    "results_output_dropout_0.45.txt:Final Results (Instances): [0.2545454545454545, 0.0821917808219178, 0.5142857142857142, 0.14173228346456693]\n",
-    "results_output_dropout_0.45.txt:Final Results (Knocked out): [0.5431563741422897, 0.7222088835534214, 0.5431563741422897, 0.6200144285272596]\n",
-    "results_output_dropout_0.4.txt:Final Results (Test): [0.6741854636591479, 0.6117021276595744, 0.6157965194109772, 0.6137424949966644]\n",
-    "results_output_dropout_0.4.txt:Final Results (Instances): [0.2109090909090909, 0.08547008547008547, 0.5714285714285714, 0.14869888475836432]\n",
-    "results_output_dropout_0.4.txt:Final Results (Knocked out): [0.5619357168652943, 0.7427207637231503, 0.5619357168652943, 0.6398026315789473]\n",
-    "results_output_dropout_0.5.txt:Final Results (Test): [0.6307435254803676, 0.5706874189364461, 0.5890227576974565, 0.5797101449275361]\n",
-    "results_output_dropout_0.5.txt:Final Results (Instances): [0.23636363636363636, 0.07657657657657657, 0.4857142857142857, 0.13229571984435798]\n",
-    "results_output_dropout_0.5.txt:Final Results (Knocked out): [0.5393643914770675, 0.7089959648706385, 0.5393643914770675, 0.6126551122961748]\n",
-    "results_output_dropout_0.6.txt:Final Results (Test): [0.5630743525480367, 0.4987593052109181, 0.5381526104417671, 0.5177076625885383]\n",
-    "results_output_dropout_0.6.txt:Final Results (Instances): [0.22545454545454546, 0.0593607305936073, 0.37142857142857144, 0.10236220472440945]\n",
-    "results_output_dropout_0.6.txt:Final Results (Knocked out): [0.5334055615745756, 0.6823746823746824, 0.5334055615745756, 0.5987635552852943]\n",
-    "results_output_dropout_0.7.txt:Final Results (Test): [0.48872180451127817, 0.4189636163175303, 0.5087014725568942, 0.4594921402660218]\n",
-    "results_output_dropout_0.7.txt:Final Results (Instances): [0.16363636363636364, 0.034334763948497854, 0.22857142857142856, 0.05970149253731343]\n",
-    "results_output_dropout_0.7.txt:Final Results (Knocked out): [0.5193210545323221, 0.6318101933216169, 0.5193210545323221, 0.5700693756194252]\n",
-    "results_output_dropout_0.8.txt:Final Results (Test): [0.4193817878028404, 0.36585365853658536, 0.4819277108433735, 0.415944540727903]\n",
-    "results_output_dropout_0.8.txt:Final Results (Instances): [0.11272727272727273, 0.02032520325203252, 0.14285714285714285, 0.03558718861209964]\n",
-    "results_output_dropout_0.8.txt:Final Results (Knocked out): [0.5059588299024919, 0.5794044665012407, 0.5059588299024919, 0.5401966454598033]\n",
-    "results_output_dropout_0.05.txt:Final Results (Test): [0.7644110275689223, 0.7295774647887324, 0.6934404283801874, 0.7110501029512697]\n",
-    "results_output_dropout_0.05.txt:Final Results (Instances): [0.20727272727272728, 0.11065573770491803, 0.7714285714285715, 0.19354838709677422]\n",
-    "results_output_dropout_0.05.txt:Final Results (Knocked out): [0.6433730588660166, 0.8954511183714501, 0.6433730588660166, 0.7487653672375749]\n",
-    "results_output_dropout_0.15.txt:Final Results (Test): [0.7543859649122807, 0.6986486486486486, 0.6921017402945113, 0.6953597848016139]\n",
-    "results_output_dropout_0.15.txt:Final Results (Instances): [0.22545454545454546, 0.12396694214876033, 0.8571428571428571, 0.21660649819494585]\n",
-    "results_output_dropout_0.15.txt:Final Results (Knocked out): [0.6097869266883351, 0.8360980440703144, 0.6097869266883351, 0.7052312832828653]\n",
-    "results_output_dropout_0.1.txt:Final Results (Test): [0.7702589807852965, 0.7255172413793104, 0.7041499330655957, 0.7146739130434782]\n",
-    "results_output_dropout_0.1.txt:Final Results (Instances): [0.24363636363636362, 0.11538461538461539, 0.7714285714285715, 0.2007434944237918]\n",
-    "results_output_dropout_0.1.txt:Final Results (Knocked out): [0.6150234741784038, 0.8614061709661103, 0.6150234741784038, 0.7176569742941423]\n",
-    "results_output_dropout_0.25.txt:Final Results (Test): [0.7251461988304093, 0.6689280868385346, 0.6599732262382865, 0.6644204851752021]\n",
-    "results_output_dropout_0.25.txt:Final Results (Instances): [0.24363636363636362, 0.11965811965811966, 0.8, 0.20817843866171004]\n",
-    "results_output_dropout_0.25.txt:Final Results (Knocked out): [0.591368725171542, 0.7893468305615811, 0.591368725171542, 0.6761639310416021]\n",
-    "results_output_dropout_0.2.txt:Final Results (Test): [0.7426900584795322, 0.6834239130434783, 0.6733601070950469, 0.6783546864463924]\n",
-    "results_output_dropout_0.2.txt:Final Results (Instances): [0.22545454545454546, 0.12033195020746888, 0.8285714285714286, 0.21014492753623187]\n",
-    "results_output_dropout_0.2.txt:Final Results (Knocked out): [0.6018418201516793, 0.8139194139194139, 0.6018418201516793, 0.6919962628464653]\n",
-    "results_output_dropout_0.3.txt:Final Results (Test): [0.7009189640768588, 0.6457765667574932, 0.6345381526104418, 0.6401080351114112]\n",
-    "results_output_dropout_0.3.txt:Final Results (Instances): [0.2109090909090909, 0.0970464135021097, 0.6571428571428571, 0.1691176470588235]\n",
-    "results_output_dropout_0.3.txt:Final Results (Knocked out): [0.5819790538100397, 0.7783144168075344, 0.5819790538100397, 0.6659778902779212]\n",
-    "results_output_dropout_0.txt:Final Results (Test): [0.7761069340016709, 0.7336122733612274, 0.7041499330655957, 0.7185792349726776]\n",
-    "results_output_dropout_0.txt:Final Results (Instances): [0.23636363636363636, 0.12184873949579832, 0.8285714285714286, 0.21245421245421245]\n",
-    "results_output_dropout_0.txt:Final Results (Knocked out): [0.6323582520765619, 0.9198844234305227, 0.6323582520765619, 0.7494917067950776]\"\"\"\n",
+    "results = \"\"\"results_dropout_0.3_0_0.15_.txt:Final Results (Test): [0.8011695906432749, 0.7585266030013642, 0.7443105756358769, 0.7513513513513513]\n",
+    "results_dropout_0.3_0_0.15_.txt:Final Results (Instances): [0.23636363636363636, 0.1322314049586777, 0.9142857142857143, 0.23104693140794227]\n",
+    "results_dropout_0.3_0_0.15_.txt:Final Results (Knocked out): [0.7170458649331889, 0.9230590423059042, 0.7170458649331889, 0.8071138211382113]\n",
+    "results_dropout_0.3_0.2_0.15_.txt:Final Results (Test): [0.8095238095238095, 0.773224043715847, 0.7576974564926372, 0.7653820148749154]\n",
+    "results_dropout_0.3_0.2_0.15_.txt:Final Results (Instances): [0.23636363636363636, 0.13278008298755187, 0.9142857142857143, 0.23188405797101447]\n",
+    "results_dropout_0.3_0.2_0.15_.txt:Final Results (Knocked out): [0.6979053810039726, 0.9163110478899953, 0.6979053810039726, 0.7923329233292333]\n",
+    "results_dropout_0.3_0.7_0.15_.txt:Final Results (Test): [0.808688387635756, 0.76797829036635, 0.7576974564926372, 0.7628032345013476]\n",
+    "results_dropout_0.3_0.7_0.15_.txt:Final Results (Instances): [0.22545454545454546, 0.12757201646090535, 0.8857142857142857, 0.22302158273381295]\n",
+    "results_dropout_0.3_0.7_0.15_.txt:Final Results (Knocked out): [0.7181292885518238, 0.919750231267345, 0.7181292885518238, 0.8065301155952138]\n",
+    "results_dropout_0.3_0.8_0.15_.txt:Final Results (Test): [0.8045112781954887, 0.7681755829903978, 0.749665327978581, 0.7588075880758807]\n",
+    "results_dropout_0.3_0.8_0.15_.txt:Final Results (Instances): [0.23272727272727273, 0.12863070539419086, 0.8857142857142857, 0.22463768115942026]\n",
+    "results_dropout_0.3_0.8_0.15_.txt:Final Results (Knocked out): [0.7186710003611412, 0.9206569511913023, 0.7186710003611412, 0.8072203630463441]\n",
+    "results_dropout_0.3_0.8_0_.txt:Final Results (Test): [0.808688387635756, 0.7701778385772914, 0.7536813922356091, 0.7618403247631934]\n",
+    "results_dropout_0.3_0.8_0_.txt:Final Results (Instances): [0.21818181818181817, 0.13008130081300814, 0.9142857142857143, 0.22775800711743777]\n",
+    "results_dropout_0.3_0.8_0_.txt:Final Results (Knocked out): [0.7040447815095703, 0.9208786017949929, 0.7040447815095703, 0.7979942693409743]\n",
+    "results_dropout_0.35_0_0.15_.txt:Final Results (Test): [0.8011695906432749, 0.7547425474254743, 0.7456492637215528, 0.7501683501683502]\n",
+    "results_dropout_0.35_0_0.15_.txt:Final Results (Instances): [0.2290909090909091, 0.13168724279835392, 0.9142857142857143, 0.2302158273381295]\n",
+    "results_dropout_0.35_0_0.15_.txt:Final Results (Knocked out): [0.7248104008667389, 0.9214876033057852, 0.7248104008667389, 0.8114008489993936]\n",
+    "results_dropout_0.35_0.2_0.15_.txt:Final Results (Test): [0.8028404344193818, 0.7654320987654321, 0.7469879518072289, 0.7560975609756098]\n",
+    "results_dropout_0.35_0.2_0.15_.txt:Final Results (Instances): [0.24, 0.13278008298755187, 0.9142857142857143, 0.23188405797101447]\n",
+    "results_dropout_0.35_0.2_0.15_.txt:Final Results (Knocked out): [0.7080173347778982, 0.9195590994371482, 0.7080173347778982, 0.8000408079983676]\n",
+    "results_dropout_0.35_0.7_0.15_.txt:Final Results (Test): [0.808688387635756, 0.76797829036635, 0.7576974564926372, 0.7628032345013476]\n",
+    "results_dropout_0.35_0.7_0.15_.txt:Final Results (Instances): [0.21454545454545454, 0.12601626016260162, 0.8857142857142857, 0.2206405693950178]\n",
+    "results_dropout_0.35_0.7_0.15_.txt:Final Results (Knocked out): [0.7143373058866017, 0.9170143718127028, 0.7143373058866017, 0.8030856678846934]\n",
+    "results_dropout_0.35_0.8_0.15_.txt:Final Results (Test): [0.8078529657477026, 0.7676630434782609, 0.7563587684069611, 0.7619689817936616]\n",
+    "results_dropout_0.35_0.8_0.15_.txt:Final Results (Instances): [0.2109090909090909, 0.12195121951219512, 0.8571428571428571, 0.21352313167259784]\n",
+    "results_dropout_0.35_0.8_0.15_.txt:Final Results (Knocked out): [0.720837847598411, 0.9206642066420664, 0.720837847598411, 0.8085882114644519]\n",
+    "results_dropout_0.35_0.8_0_.txt:Final Results (Test): [0.8162071846282373, 0.7827868852459017, 0.7670682730923695, 0.7748478701825559]\n",
+    "results_dropout_0.35_0.8_0_.txt:Final Results (Instances): [0.23272727272727273, 0.128099173553719, 0.8857142857142857, 0.22382671480144403]\n",
+    "results_dropout_0.35_0.8_0_.txt:Final Results (Knocked out): [0.704225352112676, 0.9215500945179584, 0.704225352112676, 0.7983623336745138]\n",
+    "results_dropout_0.3_0.2_0_.txt:Final Results (Test): [0.8028404344193818, 0.7612551159618008, 0.7469879518072289, 0.754054054054054]\n",
+    "results_dropout_0.3_0.2_0_.txt:Final Results (Instances): [0.22181818181818183, 0.1306122448979592, 0.9142857142857143, 0.22857142857142856]\n",
+    "results_dropout_0.3_0.2_0_.txt:Final Results (Knocked out): [0.6787648970747562, 0.9215493993625888, 0.6787648970747562, 0.7817406675678487]\n",
+    "results_dropout_0.3_0.7_0_.txt:Final Results (Test): [0.8095238095238095, 0.7693351424694709, 0.7590361445783133, 0.7641509433962265]\n",
+    "results_dropout_0.3_0.7_0_.txt:Final Results (Instances): [0.22181818181818183, 0.13008130081300814, 0.9142857142857143, 0.22775800711743777]\n",
+    "results_dropout_0.3_0.7_0_.txt:Final Results (Knocked out): [0.6946551101480679, 0.9201148050705573, 0.6946551101480679, 0.7916452309908427]\n",
+    "results_dropout_0.35_0.2_0_.txt:Final Results (Test): [0.8011695906432749, 0.7640603566529492, 0.7456492637215528, 0.7547425474254743]\n",
+    "results_dropout_0.35_0.2_0_.txt:Final Results (Instances): [0.2545454545454545, 0.13559322033898305, 0.9142857142857143, 0.23616236162361626]\n",
+    "results_dropout_0.35_0.2_0_.txt:Final Results (Knocked out): [0.6794871794871795, 0.9245700245700246, 0.6794871794871795, 0.7833055786844297]\n",
+    "results_dropout_0.35_0.7_0_.txt:Final Results (Test): [0.8078529657477026, 0.771117166212534, 0.7576974564926372, 0.7643484132343012]\n",
+    "results_dropout_0.35_0.7_0_.txt:Final Results (Instances): [0.24363636363636362, 0.13333333333333333, 0.9142857142857143, 0.23272727272727273]\n",
+    "results_dropout_0.35_0.7_0_.txt:Final Results (Knocked out): [0.6986276634163958, 0.9231686948222382, 0.6986276634163958, 0.7953540960016445]\"\"\"\n",
     "\n",
-    "rownames, colnames, data = list(zip(*[(float(line.split(\".txt\")[0].split(\"_\")[-1]), line.split(\"(\")[-1].split(\")\")[0], float(line.split(\"[\")[-1].split(\"]\")[0].split(\",\")[-1].strip())) for line in results.split(\"\\n\")]))\n",
+    "rownames, colnames, data = list(zip(*[(\",\".join(line.split(\"_.txt\")[0].split(\"_\")[-3:]), line.split(\"(\")[-1].split(\")\")[0], float(line.split(\"[\")[-1].split(\"]\")[0].split(\",\")[-1].strip())) for line in results.split(\"\\n\")]))\n",
     "from orderedset import OrderedSet\n",
     "rownames, colnames = OrderedSet(rownames), OrderedSet(colnames)\n",
     "data = np.array(data).reshape((len(rownames), len(colnames))).tolist()\n",
     "import pandas as pd\n",
-    "pd.DataFrame(data, columns=colnames, index=rownames).sort_index().to_csv(\"results_output_dropout.tsv\", sep=\"\\t\")"
+    "pd.DataFrame(data, columns=colnames, index=rownames).sort_index()"
    ]
   },
   {
