--- a/OntoEnricher/src/Train.ipynb
+++ b/OntoEnricher/src/Train.ipynb
@@ -992,42 +992,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([3, 0, 3, 4])"
+       "tensor([[ 1.4354e-01, -2.4744e+00, -1.2262e+00, -4.0278e-01,  1.9652e+00,\n",
+       "          2.9542e+00,  6.6998e-02, -7.3829e+01],\n",
+       "        [-4.5266e-01, -1.3811e+00, -4.9185e-01, -1.9605e+00, -3.2036e-01,\n",
+       "         -1.2381e+00,  1.3872e-01, -6.3207e+01],\n",
+       "        [ 6.9792e-01, -1.2247e-01,  7.7042e-01,  3.2037e-02, -6.5696e-01,\n",
+       "         -4.9648e-01,  5.9166e-02,  6.9360e+01],\n",
+       "        [ 2.8257e-01, -2.9700e+00,  1.3231e-01, -2.7354e+00,  3.3597e-01,\n",
+       "         -6.2222e-01, -2.9061e-01, -1.4742e+01],\n",
+       "        [ 1.6055e-01,  9.0650e-01,  9.2916e-01,  5.3029e-01, -1.2657e+00,\n",
+       "         -1.0209e+00,  2.7596e-02, -7.0289e+01],\n",
+       "        [ 2.3818e-01, -1.1293e+00,  9.9822e-01, -8.4411e-01, -1.1915e+00,\n",
+       "          3.1715e+00,  3.4325e-01,  1.4783e+02],\n",
+       "        [ 1.2325e-01, -1.3863e+00,  1.7848e+00, -1.6062e-01, -2.9663e-01,\n",
+       "         -1.6308e+00, -2.3644e-01, -3.5159e+01],\n",
+       "        [-5.4035e-01,  2.4307e+00, -6.3870e-01,  1.3965e+00,  4.7659e-01,\n",
+       "         -1.7653e+00,  8.4513e-01,  4.2152e+01],\n",
+       "        [ 4.7109e-01,  4.4379e-01,  8.3074e-01,  5.5326e-01,  7.6107e-01,\n",
+       "          3.1948e+00,  9.3457e-02,  2.2637e+01],\n",
+       "        [-3.4702e-01, -8.4466e-01, -8.1269e-01, -3.5797e-01, -9.2906e-01,\n",
+       "         -3.6120e+00, -1.4749e-02,  1.9270e+01],\n",
+       "        [ 6.6859e-01,  7.7974e-01,  7.9757e-01,  1.7175e+00, -1.4106e+00,\n",
+       "          1.9459e+00, -7.7741e-02,  6.1833e+01],\n",
+       "        [ 2.6739e-01,  5.3001e-01,  3.2320e-01,  6.0621e-01, -3.9023e-01,\n",
+       "          2.6881e-01, -5.8297e-02, -4.4644e+01],\n",
+       "        [ 8.7585e-01, -1.8970e-02,  1.3322e+00, -5.8509e-02, -6.1655e-01,\n",
+       "          2.2904e+00,  4.3869e-02, -5.9299e+01],\n",
+       "        [ 2.4692e-01, -7.5639e-01,  7.6853e-01, -7.0606e-01,  1.8673e-02,\n",
+       "          7.0605e-01,  8.1008e-02,  3.0624e+00],\n",
+       "        [-1.4392e-02, -3.0728e+00, -7.2102e-01,  1.0408e+00, -1.9747e+00,\n",
+       "         -6.8391e-01, -3.9031e-01, -1.0617e+00],\n",
+       "        [ 1.7657e-01,  2.9484e+00,  8.7065e-01, -6.6700e-01,  5.5935e-02,\n",
+       "          4.8453e-01,  4.1765e-02,  1.2736e+01],\n",
+       "        [-8.4580e-02,  1.3168e+00, -2.0574e-01,  2.4354e-01, -3.9438e-01,\n",
+       "          1.8136e+00, -2.7519e-01, -4.3244e+01],\n",
+       "        [ 7.4863e-02,  2.1348e+00, -1.2002e-01, -8.4945e-01,  3.6938e-01,\n",
+       "         -4.2418e+00,  1.3322e-01, -4.6466e+01],\n",
+       "        [ 4.3882e-01, -8.4275e-01, -1.3993e+00, -5.3849e-01,  1.3115e-01,\n",
+       "          3.1488e+00, -7.6403e-02, -4.3803e+01],\n",
+       "        [ 3.6960e-01, -3.8531e+00,  6.4204e-01, -5.0798e-01, -1.4486e+00,\n",
+       "         -1.1646e+00,  2.1846e-01,  7.1424e+00],\n",
+       "        [-3.0737e-01,  2.6769e+00, -4.7298e-01,  5.1459e-01, -4.6488e-01,\n",
+       "          4.6091e-01, -2.9202e-01, -7.4085e+01],\n",
+       "        [-1.3837e-01, -5.8872e-01,  2.9837e-01, -2.5851e-01,  2.6537e-01,\n",
+       "         -5.5405e-01, -2.7471e-01,  2.0319e+02],\n",
+       "        [-1.4099e-01,  1.6516e+00,  1.7276e+00, -1.8790e-01, -2.5820e-01,\n",
+       "         -1.1626e+00,  2.4523e-01,  2.8107e+01],\n",
+       "        [ 5.5138e-01,  4.2332e-01, -6.4040e-01,  1.7131e+00,  1.9154e+00,\n",
+       "          1.3130e+00,  6.5097e-01, -1.6558e+02],\n",
+       "        [-3.1587e-02, -3.0528e-01, -8.3014e-02,  1.5041e+00,  1.7571e+00,\n",
+       "         -9.1181e-01,  6.5604e-02, -2.2597e+02],\n",
+       "        [-2.9552e-01, -3.1991e+00, -1.2498e-02, -9.1024e-01,  9.4859e-01,\n",
+       "          1.6068e-01, -1.9088e-02,  1.6598e+01],\n",
+       "        [ 3.8929e-01, -1.8966e+00, -2.8806e-01, -2.0629e+00, -3.5893e-01,\n",
+       "          9.9165e-01,  2.1546e-01, -1.6287e+02],\n",
+       "        [ 1.9928e-01,  1.7356e-02, -1.0550e+00, -1.4627e+00, -9.2043e-01,\n",
+       "         -7.6370e-01,  2.4863e-01,  4.5780e+01],\n",
+       "        [ 2.0005e-01,  3.8524e+00, -5.8534e-01,  1.1067e+00,  2.4953e+00,\n",
+       "         -1.4545e+00,  1.2885e-01, -2.9230e+01],\n",
+       "        [-3.8291e-01, -1.7037e+00, -3.8610e-02, -8.0513e-02,  2.3976e-01,\n",
+       "          3.4969e+00, -5.9119e-01, -6.7425e+01],\n",
+       "        [-4.5860e-02,  3.0710e+00, -4.7413e-01,  6.7547e-01,  8.0935e-01,\n",
+       "          3.1341e+00, -2.4640e-01,  6.8537e+01],\n",
+       "        [-1.5833e-01,  7.5869e-02, -2.7205e-01, -9.8339e-01, -1.7621e+00,\n",
+       "         -9.5605e-02,  1.4151e-01, -9.1735e+01]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "targets"
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "counts = torch.randn (32, 8)\n",
+    "div = torch.randn (8)\n",
+    "torch.div(counts, div)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "289"
+       "tensor([3, 2, 3, 5, 7, 2, 5, 2, 6, 0, 5, 3, 2, 2, 7, 4, 5, 5, 5, 0, 6, 2, 0, 5,\n",
+       "        7, 2, 6, 7, 1, 4, 0, 7])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_paths"
+    "a"
    ]
   },
   {
