Pushing new instance file

--- a/OntoEnricher/src/Train.ipynb
+++ b/OntoEnricher/src/Train.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "## import sys\n",
     "sys.argv = [\"main\", \"data_use_0.8.pkl\", \"results_sample.txt\", \"sample.pt\"]"
    ]
   },
