--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,10 +385,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Doing  ../files/dataset/instances2_orig.tsv\n",
-      "Doing  ../files/dataset/instances2_validated.tsv\n",
-      "Train len: 10739, Test len: 1197, Instance len: 1025, Knocked len: 5538\n",
-      "6869 30318\n"
+      "Doing  ../files/dataset/security0_short.tsv\n",
+      "Doing  ../files/dataset/security1_short.tsv\n",
+      "Doing  ../files/dataset/security2_short.tsv\n",
+      "Doing  ../files/dataset/security3_short.tsv\n",
+      "Train len: 10739, Test len: 1197, Instance len: 21, Knocked len: 5538\n",
+      "6869 28120\n"
      ]
     }
    ],
@@ -430,10 +432,13 @@
     "nodes_test = [[emb_indexer[tup[0]], emb_indexer[tup[1]]] for tup in test_dataset]\n",
     "nodes_knocked = [[emb_indexer[tup[0]], emb_indexer[tup[1]]] for tup in test_knocked]\n",
     "\n",
-    "all_instances_data = []\n",
+    "nodes_instances_original, nodes_instances_webpage, nodes_instances_hybrid = [], [], []\n",
+    "paths_instances_original, paths_instances_webpage, paths_instances_hybrid = [], [], []\n",
+    "counts_instances_original, counts_instances_webpage, counts_instances_hybrid = [], [], []\n",
+    "targets_instances_original, targets_instances_webpage, targets_instances_hybrid = [], [], []\n",
     "\n",
-    "instance_files = [\"../files/dataset/instances2_orig.tsv\", \"../files/dataset/instances2_validated.tsv\"]\n",
-    "security_files = [\"../files/dataset/security2.txt\", \"../files/dataset/security2.txt\"]\n",
+    "instance_files = sorted(glob.glob(\"../files/dataset/security*_short.tsv\"))\n",
+    "security_files = sorted(glob.glob(\"../files/dataset/security*.txt\"))\n",
     "\n",
     "for instance_file, security_file in list(zip(instance_files, security_files)):\n",
     "\n",
@@ -481,7 +486,21 @@
     "        paths_instances.append(list(to_list(list(counter.keys()))))\n",
     "        counts_instances.append(list(counter.values()))\n",
     "    \n",
-    "    all_instances_data.extend([nodes_instances, paths_instances_old, counts_instances_old, paths_instances_new, counts_instances_new, paths_instances, counts_instances, targets_instances])\n",
+    "    nodes_instances_original.extend(nodes_instances)\n",
+    "    nodes_instances_webpage.extend(nodes_instances)\n",
+    "    nodes_instances_hybrid.extend(nodes_instances)\n",
+    "\n",
+    "    paths_instances_original.extend(paths_instances_old)\n",
+    "    paths_instances_webpage.extend(paths_instances_new)\n",
+    "    paths_instances_hybrid.extend(paths_instances)\n",
+    "    \n",
+    "    counts_instances_original.extend(counts_instances_old)\n",
+    "    counts_instances_webpage.extend(counts_instances_new)\n",
+    "    counts_instances_hybrid.extend(counts_instances)\n",
+    "    \n",
+    "    targets_instances_original.extend(targets_instances)\n",
+    "    targets_instances_webpage.extend(targets_instances)\n",
+    "    targets_instances_hybrid.extend(targets_instances)\n",
     "\n",
     "print (\"Train len: {}, Test len: {}, Instance len: {}, Knocked len: {}\".format(len(paths_train), len(paths_test),  len(paths_instances), len(paths_knocked)))\n",
     "print (len(failed), len(success))\n",
@@ -490,13 +509,16 @@
     "emb_vals = np.array(np.zeros((1, embeds.shape[1])).tolist() + embeds.tolist())\n",
     "\n",
     "\n",
-    "output_file = \"../Input/data_instances_new.pkl\"\n",
+    "output_file = \"../Input/data_instances_v3.pkl\"\n",
     "f = open(output_file, \"wb+\")\n",
     "pickle.dump([nodes_train, paths_train, counts_train, targets_train, \n",
     "             nodes_test, paths_test, counts_test, targets_test,\n",
     "             nodes_knocked, paths_knocked, counts_knocked, targets_knocked,\n",
-    "             *all_instances_data, emb_indexer, emb_indexer_inv, emb_vals, \n",
-    "             pos_indexer, dep_indexer, dir_indexer, rel_indexer], f)\n",
+    "             nodes_instances_original, nodes_instances_webpage, nodes_instances_hybrid,\n",
+    "             paths_instances_original, paths_instances_webpage, paths_instances_hybrid,\n",
+    "             counts_instances_original, counts_instances_webpage, counts_instances_hybrid,\n",
+    "             targets_instances_original, targets_instances_webpage, targets_instances_hybrid,\n",
+    "             emb_indexer, emb_indexer_inv, emb_vals, pos_indexer, dep_indexer, dir_indexer, rel_indexer], f)\n",
     "f.close()\n",
     "\n"
    ]
@@ -1081,23 +1103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "343"
+       "1217"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import sys\n",
-    "all_lines = [l.split(\"\\t\") for l in open(\"../Outputs/Output_instances_\").read().split(\"\\n\")]\n",
+    "all_lines = [l.split(\"\\t\") for l in open(\"../Outputs/Output_instances_Instances4 (hybrid).tsv\").read().split(\"\\n\")]\n",
     "\n",
     "flatten = lambda l: [item for sublist in l for item in sublist]\n",
     "entities = list(set(flatten([line[:2] for line in all_lines])))\n",
@@ -1125,7 +1147,7 @@
     "            filtered_lines.append(elem)\n",
     "    except:\n",
     "        print (elem)\n",
-    "open(\"../Lalit-results/zerodaythreats.tsv\", \"w+\").write(\"\\n\".join([\"\\t\".join(line) for line in [[\"a\",\"b\",\"pred\",\"label\"]] + [elem for elem in filtered_lines if elem[-2]!=\"none\"]]))\n",
+    "open(\"../Lalit-results/keysight.tsv\", \"w+\").write(\"\\n\".join([\"\\t\".join(line) for line in [[\"a\",\"b\",\"pred\",\"label\"]] + [elem for elem in filtered_lines if elem[-2]!=\"none\"]]))\n",
     "\n",
     "# [elem for elem in filtered_lines if elem[-2]!=\"none\"]\n",
     "# precision"
@@ -1159,22 +1181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "52"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_be_added, all_gt_pairs_in_doc"
+    "open(\"../files/dataset/security1_short.tsv\",\"w+\").write(\"\\n\".join([\"\\t\".join(l.split(\"\\t\")[:2] + l.split(\"\\t\")[3:]) for l in open(\"../Lalit-results/hyperbox.tsv\").read().split(\"\\n\")[1:]]))\n",
+    "\n"
    ]
   },
   {
